<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:paddingBottom="10dp"
        android:id="@+id/choose_letter_textView"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/choose_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="200dp"/>

    <Button
        android:id="@+id/a_button"
        android:text="A"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_button"
        />

    <Button
        android:id="@+id/b_button"
        android:text="B"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/a_button"
        app:layout_constraintEnd_toStartOf="@id/c_button"
        />

    <Button
        android:id="@+id/c_button"
        android:text="C"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/b_button"
        app:layout_constraintEnd_toStartOf="@id/d_button"
        />

    <Button
        android:id="@+id/d_button"
        android:text="D"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/c_button"
        app:layout_constraintEnd_toStartOf="@id/e_button"
        />

    <Button
        android:id="@+id/e_button"
        android:text="E"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/d_button"
        app:layout_constraintEnd_toStartOf="@id/f_button"
        />

    <Button
        android:id="@+id/f_button"
        android:text="F"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/e_button"
        app:layout_constraintEnd_toStartOf="@id/g_button"
        />

    <Button
        android:id="@+id/g_button"
        android:text="G"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/f_button"
        app:layout_constraintEnd_toStartOf="@id/h_button"
        />

    <Button
        android:id="@+id/h_button"
        android:text="H"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/g_button"
        app:layout_constraintEnd_toStartOf="@id/i_button"
        />

    <Button
        android:id="@+id/i_button"
        android:text="I"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_letter_textView"
        app:layout_constraintStart_toEndOf="@+id/h_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/j_button"
        android:text="J"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/a_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/k_button"
        />

    <Button
        android:id="@+id/k_button"
        android:text="K"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/b_button"
        app:layout_constraintStart_toEndOf="@+id/j_button"
        app:layout_constraintEnd_toStartOf="@id/l_button"
        />

    <Button
        android:id="@+id/l_button"
        android:text="L"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/c_button"
        app:layout_constraintStart_toEndOf="@+id/k_button"
        app:layout_constraintEnd_toStartOf="@id/m_button"
        />

    <Button
        android:id="@+id/m_button"
        android:text="M"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/d_button"
        app:layout_constraintStart_toEndOf="@+id/l_button"
        app:layout_constraintEnd_toStartOf="@id/n_button"
        />

    <Button
        android:id="@+id/n_button"
        android:text="N"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/e_button"
        app:layout_constraintStart_toEndOf="@+id/m_button"
        app:layout_constraintEnd_toStartOf="@id/o_button"
        />

    <Button
        android:id="@+id/o_button"
        android:text="O"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/f_button"
        app:layout_constraintStart_toEndOf="@+id/n_button"
        app:layout_constraintEnd_toStartOf="@id/p_button"
        />

    <Button
        android:id="@+id/p_button"
        android:text="P"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/g_button"
        app:layout_constraintStart_toEndOf="@+id/o_button"
        app:layout_constraintEnd_toStartOf="@id/q_button"
        />

    <Button
        android:id="@+id/q_button"
        android:text="Q"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/h_button"
        app:layout_constraintStart_toEndOf="@+id/p_button"
        app:layout_constraintEnd_toStartOf="@id/r_button"
        />

    <Button
        android:id="@+id/r_button"
        android:text="R"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/i_button"
        app:layout_constraintStart_toEndOf="@+id/q_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/s_button"
        android:text="S"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/j_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/t_button"
        />

    <Button
        android:id="@+id/t_button"
        android:text="T"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/k_button"
        app:layout_constraintStart_toEndOf="@+id/s_button"
        app:layout_constraintEnd_toStartOf="@id/u_button"
        />

    <Button
        android:id="@+id/u_button"
        android:text="U"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/l_button"
        app:layout_constraintStart_toEndOf="@+id/t_button"
        app:layout_constraintEnd_toStartOf="@id/v_button"
        />

    <Button
        android:id="@+id/v_button"
        android:text="V"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/m_button"
        app:layout_constraintStart_toEndOf="@+id/u_button"
        app:layout_constraintEnd_toStartOf="@id/w_button"
        />

    <Button
        android:id="@+id/w_button"
        android:text="W"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/n_button"
        app:layout_constraintStart_toEndOf="@+id/v_button"
        app:layout_constraintEnd_toStartOf="@id/x_button"
        />

    <Button
        android:id="@+id/x_button"
        android:text="X"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/o_button"
        app:layout_constraintStart_toEndOf="@+id/w_button"
        app:layout_constraintEnd_toStartOf="@id/y_button"
        />

    <Button
        android:id="@+id/y_button"
        android:text="Y"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/p_button"
        app:layout_constraintStart_toEndOf="@+id/x_button"
        app:layout_constraintEnd_toStartOf="@id/z_button"
        />

    <Button
        android:id="@+id/z_button"
        android:text="Z"
        android:padding="4dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_button"
        app:backgroundTint="#8A8989"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@+id/q_button"
        app:layout_constraintStart_toEndOf="@+id/y_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>